--- a/05.js.navbar/index.html
+++ b/05.js.navbar/index.html
@@ -26,10 +26,10 @@
         </div>
 
         <div class="nav-link menu">
-          <a href="#">home</a>
-          <a href="#">about</a>
-          <a href="#">contact</a>
-          <a href="#">blog</a>
+          <a href="#">Services</a>
+          <a href="#">Project</a>
+          <a href="#">About</a>
+          <a href="#" class="contact">Contact</a>
         </div>
       </nav>
     </header>
