--- a/05.blog-app/home.html
+++ b/05.blog-app/home.html
@@ -39,8 +39,8 @@
 
     <div class="container">
       <div class="cards">
-        <div class="card">
-          <div class="card-body">
+        <!-- <div class="card"> -->
+        <!-- <div class="card-body">
             <h3 class="card-title">Magni id ratione off</h3>
             <p class="text">
               Velit deleniti qui e...
@@ -54,7 +54,7 @@
               <button class="edit">Edit</button>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
