--- a/05.blog-app/details.html
+++ b/05.blog-app/details.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,16 +18,16 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./details.js"></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <header>
-          <button class="detailsBtn">GO BACK</button>
-        </header>
-  
-        <section>
-          <div class="details">
-              <div class="cards">
+      <header>
+        <button class="detailsBtn">GO BACK</button>
+      </header>
+
+      <section>
+        <div class="details">
+          <!-- <div class="cards">
                   <div class="card">
                     <div class="card-body">
                       <h3 class="card-title">Magni id ratione off</h3>
@@ -42,9 +42,9 @@
                       </div>
                     </div>
                   </div>
-                </div>
-          </div>
-        </section>
-      </div>
-</body>
+                </div> -->
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
