--- a/finally.layihe/index.html
+++ b/finally.layihe/index.html
@@ -18,6 +18,13 @@
       crossorigin="anonymous"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=EB+Garamond:ital,wght@1,400;1,600&family=Poppins&family=Syne:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -32,6 +39,12 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
+    ></script>
+    <script defer src="./assets/main.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -137,7 +150,7 @@
                   class="d-block w-100"
                   alt="..."
                 />
-                <h3><img src="..." class="d-block w-100" alt="..." /></h3>
+                <h3><img src="" class="d-block w-100" alt="..." /></h3>
               </div>
               <div class="w-20">
                 <img
@@ -165,7 +178,7 @@
                   class="d-block w-100"
                   alt="..."
                 />
-                <h3><img src="..." class="d-block w-100" alt="..." /></h3>
+                <h3><img src="" class="d-block w-100" alt="..." /></h3>
               </div>
               <div class="w-20">
                 <img
@@ -192,7 +205,7 @@
                   class="d-block w-100"
                   alt="..."
                 />
-                <h3><img src="..." class="d-block w-100" alt="..." /></h3>
+                <h3><img src="" class="d-block w-100" alt="..." /></h3>
               </div>
               <div class="w-20">
                 <img
@@ -259,7 +272,7 @@
       </div>
     </section>
     <!-- ----------------------PART-6---------------------------- -->
-    <section>
+    <section id="iconText">
       <div class="container">
         <div class="iconText d-flex justify-content-center gap-5">
           <div class="productText4">
@@ -275,7 +288,7 @@
             </div>
           </div>
           <div class="productText4">
-            <div class="d-flex">
+            <div class="d-flex gap-3">
               <i class="fa-regular fa-heart"></i>
               <h3>Organic</h3>
             </div>
@@ -287,7 +300,7 @@
             </div>
           </div>
           <div class="productText4">
-            <div class="d-flex">
+            <div class="d-flex gap-3">
               <i class="fa-regular fa-sun"></i>
               <h3>Freshness</h3>
             </div>
@@ -299,7 +312,7 @@
             </div>
           </div>
           <div class="productText4">
-            <div class="d-flex">
+            <div class="d-flex gap-3">
               <i class="fa-solid fa-cart-shopping"></i>
               <h3>Delivery</h3>
             </div>
@@ -311,7 +324,201 @@
             </div>
           </div>
         </div>
+        <br />
+        <br />
+        <br />
+        <br />
       </div>
     </section>
+    <!-- ----------------------PART-7---------------------------- -->
+    <section id="flowersPricing">
+      <div class="container">
+        <div>
+          <div class="container">
+            <nav>
+              <ul class="d-flex justify-content-center gap-2">
+                <li>
+                  <a href="index.html" class="text-dark">Home</a>
+                </li>
+                <li>
+                  <a href="favorites.html" class="text-dark">Favorites</a>
+                  <sup class="fav-count text-danger">0</sup>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="flowersPricing">
+          <p class="text-center">Devoted to wonderful beauty</p>
+          <h3 class="text-center">Flowers Pricing</h3>
+          <div class="searchDiv">
+            <input
+              type="search"
+              class="search"
+              placeholder="Search by name..."
+            />
+            <button class="sort">SORT</button>
+          </div>
+          <div class="products">
+            <!-- <div>
+              <img src="" alt="">
+              <h3></h3>
+              <p></p>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ----------------------PART-8---------------------------- -->
+    <section id="eventsPricing">
+      <div class="container">
+        <div class="eventsPricing">
+          <p class="text-center">Devoted to wonderful beauty</p>
+          <h2 class="text-center devoted">Events Pricing</h2>
+          <div class="pricingCards events">
+            <div class="cardDiv">
+              <div class="dollarText">
+                <h2>$16</h2>
+                <p class="per text-center">per table</p>
+              </div>
+
+              <h3>Birthday Events</h3>
+              <p class="lorem">
+                Lorem ipsum dolor sit amet <br />
+                laudem partem perfecto per
+              </p>
+              <a href="#">
+                <button>Shop now</button>
+              </a>
+            </div>
+            <div class="cardDiv">
+              <div class="dollarText">
+                <h2>$31</h2>
+                <p class="per">per table</p>
+              </div>
+
+              <h3>Wedding Events</h3>
+              <p class="lorem">
+                Lorem ipsum dolor sit amet <br />
+                laudem partem perfecto per
+              </p>
+              <a href="#">
+                <button>Shop now</button>
+              </a>
+            </div>
+            <div class="cardDiv">
+              <div class="dollarText">
+                <h2>$52</h2>
+                <p class="per">per table</p>
+              </div>
+
+              <h3>Party Events</h3>
+              <p class="lorem">
+                Lorem ipsum dolor sit amet <br />
+                laudem partem perfecto per
+              </p>
+              <a href="#">
+                <button>Shop now</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ----------------------PART-9---------------------------- -->
+    <section id="teamSection">
+      <div class="container">
+        <p class="text-center contacts">Contacts</p>
+        <h1 class="text-center team">Our Team</h1>
+        <div class="teamSection">
+          <div class="teamCards">
+            <div class="iconDiv">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="teamDiv">
+              <img src="./assets/images/portr1.jpg" alt="" />
+              <h3 class="text-center name">Velva Kopf</h3>
+              <p class="text-center work">Biologist</p>
+            </div>
+          </div>
+          <div class="teamCards">
+            <div class="iconDiv">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="teamDiv">
+              <img src="./assets/images/portr2.jpg" alt="" />
+              <h3 class="text-center name">Sarah Palmer</h3>
+              <p class="text-center work">Florist</p>
+            </div>
+          </div>
+          <div class="teamCards">
+            <div class="iconDiv">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="teamDiv">
+              <img src="./assets/images/portr3.jpg" alt="" />
+              <h3 class="text-center name">Jessica Swift</h3>
+              <p class="text-center work">Photographer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ----------------------PART-10------------------------------>
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="footLeft">
+            <div class="logo">
+              <img src="./assets/images/signature.png" alt="" />
+            </div>
+            <div class="inputBtn">
+              <input type="text" placeholder="Your Email" class="yourEmail" />
+              <button class="send">Send</button>
+            </div>
+          </div>
+          <div class="footRight">
+            <div class="navigation">
+              <nav>
+                <ul>
+                  <li><h3>About</h3></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Our Partners</a></li>
+                  <li><a href="#">Our Services</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="navigation">
+              <nav>
+                <ul>
+                  <li><h3>Contact</h3></li>
+                  <li><a href="#">Contact Us </a></li>
+                  <li><a href="#">FAQ Page</a></li>
+                  <li><a href="#">About Me</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="navigation">
+              <nav>
+                <ul>
+                  <li>
+                    <h3>Follow Us</h3>
+                  </li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Our Partners</a></li>
+                  <li><a href="#">Our Services</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
