--- a/09.Robotics/index.html
+++ b/09.Robotics/index.html
@@ -169,7 +169,9 @@
               We’ve made a life <br />
               that will change you
             </h3>
-            <p class="weAre">We are here to listen from you deliver exellence</p>
+            <p class="weAre">
+              We are here to listen from you deliver exellence
+            </p>
             <p class="lorem">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
               doeiusmo d <br />
@@ -178,12 +180,244 @@
             <button>Get Started Now</button>
           </div>
           <div class="videoDiv">
-            <img src="./assets/images/video-bg.jpg" alt=""class="img1" />
+            <img src="./assets/images/video-bg.jpg" alt="" class="img1" />
             <div class="videoIcon">
               <img src="./assets/images/play-btn.png" alt="" />
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- ---------------------------PART-6-------------------------- -->
+    <section id="featureBg">
+      <div class="container">
+        <div class="infoCardText">
+          <div class="textParents">
+            <h3 class="text-center text-white">
+              Some Features that Made us Unique
+            </h3>
+            <p class="text-center text-white">
+              Who are in extremely love with eco friendly system.
+            </p>
+          </div>
+          <div class="infoCardParents">
+            <div class="card-info">
+              <div class="iconInfo d-flex">
+                <i class="fa-regular fa-user"></i>
+                <h4>Expert Technicians</h4>
+              </div>
+              <p>
+                Usage of the Internet is becoming more <br />
+                common due to rapid advancement of <br />
+                technology and power.
+              </p>
+            </div>
+            <div class="card-info">
+              <div class="iconInfo d-flex">
+                <i class="fa-regular fa-user"></i>
+                <h4>Expert Technicians</h4>
+              </div>
+              <p>
+                Usage of the Internet is becoming more <br />
+                common due to rapid advancement of <br />
+                technology and power.
+              </p>
+            </div>
+            <div class="card-info">
+              <div class="iconInfo d-flex">
+                <i class="fa-regular fa-user"></i>
+                <h4>Expert Technicians</h4>
+              </div>
+              <p>
+                Usage of the Internet is becoming more <br />
+                common due to rapid advancement of <br />
+                technology and power.
+              </p>
+            </div>
+            <div class="card-info">
+              <div class="iconInfo d-flex">
+                <i class="fa-regular fa-user"></i>
+                <h4>Expert Technicians</h4>
+              </div>
+              <p>
+                Usage of the Internet is becoming more <br />
+                common due to rapid advancement of <br />
+                technology and power.
+              </p>
+            </div>
+            <div class="card-info">
+              <div class="iconInfo d-flex">
+                <i class="fa-regular fa-user"></i>
+                <h4>Expert Technicians</h4>
+              </div>
+              <p>
+                Usage of the Internet is becoming more <br />
+                common due to rapid advancement of <br />
+                technology and power.
+              </p>
+            </div>
+            <div class="card-info">
+              <div class="iconInfo d-flex">
+                <i class="fa-regular fa-user"></i>
+                <h4>Expert Technicians</h4>
+              </div>
+              <p>
+                Usage of the Internet is becoming more <br />
+                common due to rapid advancement of <br />
+                technology and power.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ---------------------------PART-7-------------------------- -->
+    <section id="LogosSection">
+      <div class="container">
+        <div class="logosDiv">
+          <div class="logoDiv">
+            <img src="./assets/images/l1.png" alt="" />
+          </div>
+          <div class="logoDiv">
+            <img src="./assets/images/l2.png" alt="" />
+          </div>
+          <div class="logoDiv">
+            <img src="./assets/images/l3.png" alt="" />
+          </div>
+          <div class="logoDiv">
+            <img src="./assets/images/l4.png" alt="" />
+          </div>
+          <div class="logoDiv">
+            <img src="./assets/images/l5.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ---------------------------PART-8-------------------------- -->
+    <section>
+      <div class="container">
+        <div class="twoCardText">
+          <div class="twoText">
+            <h3 class="text-center">Latest News from our Blog</h3>
+            <p class="text-center">
+              Who are in extremely love with eco friendly system.
+            </p>
+          </div>
+          <div class="imageTextParent">
+            <div class="imageTextCard">
+              <div class="imgDiv">
+                <img src="./assets/images/b1.jpg" alt="" />
+              </div>
+              <div class="buttonDiv">
+                <button>Travel</button>
+                <button>Life Style</button>
+              </div>
+              <h4>Portable latest Fashion for young women</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod <br />
+                tempor incididunt ut labore et dolore.
+              </p>
+              <span>31st January, 2018</span>
+            </div>
+            <div class="imageTextCard">
+              <div class="imgDiv">
+                <img src="./assets/images/b2.jpg" alt="" />
+              </div>
+              <div class="buttonDiv">
+                <button>Travel</button>
+                <button>Life Style</button>
+              </div>
+              <h4>Portable latest Fashion for young women</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod <br />
+                tempor incididunt ut labore et dolore.
+              </p>
+              <span>31st January, 2018</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ---------------------------PART-9-------------------------- -->
+    <section id="footerbg">
+      <div class="container">
+        <div class="lastSection">
+          <div class="divLeft">
+            <h4 class="top">Top Products</h4>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">Managed Website</a>
+                </li>
+                <li>
+                  <a href="#">Manage Reputation</a>
+                </li>
+                <li>
+                  <a href="#">Power Tools</a>
+                </li>
+                <li>
+                  <a href="#">Marketing Service</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="divCenter">
+            <h4>Newsletter</h4>
+            <p>
+              You can trust us. we only send promo offers, not a single spam.
+            </p>
+            <div class="inputBtn">
+              <input type="text" placeholder="Enter Email" />
+              <button>SUBSCRIBE</button>
+            </div>
+          </div>
+          <div class="divRight">
+            <h4>Instragram Feed</h4>
+            <div class="miniCardParent">
+              <div class="miniCard">
+                <img src="./assets/images/i1.jpg" alt="" />
+              </div>
+              <div class="miniCard">
+                <img src="./assets/images/i2.jpg" alt="" />
+              </div>
+              <div class="miniCard">
+                <img src="./assets/images/i3.jpg" alt="" />
+              </div>
+              <div class="miniCard">
+                <img src="./assets/images/i4.jpg" alt="" />
+              </div>
+            </div>
+            <div class="miniCardParent">
+              <div class="miniCard">
+                <img src="./assets/images/i5.jpg" alt="" />
+              </div>
+              <div class="miniCard">
+                <img src="./assets/images/i6.jpg" alt="" />
+              </div>
+              <div class="miniCard">
+                <img src="./assets/images/i7.jpg" alt="" />
+              </div>
+              <div class="miniCard">
+                <img src="./assets/images/i8.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <div class="container">
+            <div class="footer">
+              <p>Copyright ©2024 All rights reserved | This template is made with  by Colorlib</p>
+              <div class="icons d-flex">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-instagram"></i>
+              </div>
+            </div>
+          </div>
+        </footer>
       </div>
     </section>
   </body>
