--- a/09.Robotics/index.html
+++ b/09.Robotics/index.html
@@ -130,7 +130,14 @@
       </div>
     </section>
     <!-- ---------------------------PART-3-------------------------- -->
-
+    <section>
+      <div class="container">
+        <div class="d-flex justify-content-center align-items-center">
+          <input type="search" placeholder="Search By Name" class="search" />
+        </div>
+        <div class="products"></div>
+      </div>
+    </section>
     <!-- BURA API ILE YAZILIR!!!. -->
     <!-- ---------------------------PART-4-------------------------- -->
     <section id="ImageAndText">
@@ -408,7 +415,10 @@
         <footer>
           <div class="container">
             <div class="footer">
-              <p>Copyright ©2024 All rights reserved | This template is made with  by Colorlib</p>
+              <p>
+                Copyright ©2024 All rights reserved | This template is made with
+                by Colorlib
+              </p>
               <div class="icons d-flex">
                 <i class="fa-brands fa-twitter"></i>
                 <i class="fa-brands fa-facebook-f"></i>
