--- a/05.blog-app/home.html
+++ b/05.blog-app/home.html
@@ -15,7 +15,12 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
+    ></script>
+    <script defer src="./home.js"></script>
+
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
@@ -38,26 +43,7 @@
     </header>
 
     <div class="container">
-      <div class="cards">
-        <!-- <div class="card"> -->
-        <!-- <div class="card-body">
-            <h3 class="card-title">Magni id ratione off</h3>
-            <p class="text">
-              Velit deleniti qui e...
-              <a href="" class="readMore" style="text-decoration: underline"
-                >Read More</a
-              >
-            </p>
-            <p class="card-text">written by Lorem</p>
-            <div class="btns">
-              <a href="#" class="Delete">Delete</a>
-              <button class="edit">Edit</button>
-            </div>
-          </div>
-        </div> -->
-      </div>
+      <div class="cards"></div>
     </div>
-
-    <script src="./home.js"></script>
   </body>
 </html>
